get build working under JDK1.6