@@ -852,7 +852,7 @@
 				<configuration>
 					<skip>false</skip>
 					<forkMode>once</forkMode>
-					<argLine>-Xms256m -Xmx512m</argLine>
+					<argLine>-Xms256m -Xmx512m -Djava.endorsed.dirs=${project.build.directory}/../../saaj-api/target/ </argLine>
 					<!-- Enable the next 2 lines if you want to attach a debugger
                     <argLine>-Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006</argLine>-->
 					<includes>
@@ -867,6 +867,22 @@
 						<property>
 						    <name>org.apache.axis2.jaxws.config.path</name>
 						    <value>./target/test-classes/axis2.xml</value>
+						</property>
+						<property>
+							<name>javax.xml.soap.MessageFactory</name>
+							<value>org.apache.axis2.saaj.MessageFactoryImpl</value>
+						</property>
+						<property>
+							<name>javax.xml.soap.SOAPFactory</name>
+							<value>org.apache.axis2.saaj.SOAPFactoryImpl</value>
+						</property>
+						<property>
+							<name>javax.xml.soap.SOAPConnectionFactory</name>
+							<value>org.apache.axis2.saaj.SOAPConnectionFactoryImpl</value>
+						</property>
+						<property>
+							<name>javax.xml.soap.MetaFactory</name>
+							<value>org.apache.axis2.saaj.SAAJMetaFactoryImpl</value>
 						</property>
 					</systemProperties>
 				</configuration>
